--- a/WpfSeeds/WpfSeeds/MainWindow.xaml
+++ b/WpfSeeds/WpfSeeds/MainWindow.xaml
@@ -5,12 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfSeeds"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="900"
-        Loaded="Window_Loaded">
+        Title="MainWindow" Height="900" Width="900">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="200"/>
-            <RowDefinition Height="600"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="819"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -19,12 +18,10 @@
                 <ColumnDefinition Width="450" />
 
             </Grid.ColumnDefinitions>
-            <Button Name="BtnAction" Content="Click" Click="BtnAction_Click" Width="100" Height="50"></Button>
-            <TextBox Grid.Column="1" Name="TbCount" Width="100" Height="50" Text="0.25" />
-            <Slider Grid.Column="2" Name="Slider" Minimum="0" Maximum="4" TickFrequency="0.1" Margin="0, 100, 0, 0" ValueChanged="Slider_ValueChanged" />
+            <Button Name="BtnStart" Content="Start" Click="BtnStart_Click" Width="70" Margin="45, 10, 10, 10" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            <TextBox Grid.Column="1" Name="TbCount" Text="0.25" Margin="10" Height="20" VerticalAlignment="Top" />
+            <Slider Grid.Column="2" Name="Slider" Minimum="0" Maximum="4" TickFrequency="0.1" Margin="10" Height="20" VerticalAlignment="Top" ValueChanged="Slider_ValueChanged" />
         </Grid>
-        <local:EllipseCanvas Grid.Row="1" x:Name="MainCanvas" Width="800" Height="600" Background="Gray">
-
-        </local:EllipseCanvas>
+        <local:EllipseCanvas Grid.Row="1" x:Name="MainCanvas" Background="Gray" Margin="46,1,46,0"/>
     </Grid>
 </Window>
